# gcip2

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  ci.py  environment.toml  pyproject.toml  test_pipeline.py
examples/: .gitlab-ci.yml  pipeline-1.gitlab-ci.yml  pipeline-2.gitlab-ci.yml
gcip2/: __init__.py  __main__.py  builder.py  builder_model.py  ci.json  ci_model.py  cli.py
gcip2/pipeline_core/: __init__.py
pipelines/: ci1.py  ci2.py  ci3.py
