[tool.poetry]
name = "gcip2"
version = "0.0.1"
description = "pivlab gcip2"
authors = ["Arsenii Nikulin <a.nikulin@pivlab.space>", "PivLab Tech"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = "^2.13.4"
jsonschema = "^4.26.0"
pyyaml = "^6.0.3"

[tool.poetry.scripts]
build-pipeline = "gcip2.__main__:build_pipeline"
build-gitlab-ci = "gcip2.__main__:build_gitlab_ci"

[tool.black]
line-length = 120
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
